# seereason-base

./: .ghci  Setup.hs  seereason-base.cabal
debian/: Debianize.hs  changelog  control  rules
src/: Comment.hs  CommentTypes.hs  GenIClient.hs  Main.hs  MkURL.hs  URL.hs
src/GenI/: URL.hs
src/JSON/: Generic2.hs
src/Ontology/: Arity.hs  Comment.hs  Extra.hs  Types.hs  URL.hs
src/Ontology/Types/: Assertion.hs  Belief.hs  Description.hs  Document.hs  DocumentId.hs  Formula.hs  FunctionId.hs  GenI.hs  InsertMode.hs  PF.hs  PredForm.hs  Subject.hs  Theorem.hs  UserData.hs
src/Ontology/Types/Formula/: AtomicFunction.hs  AtomicPredicate.hs  V.hs
src/Preferences/: URL.hs
src/Test/: Main.hs
